@@ -1535,8 +1535,7 @@ begin
   begin
     LogDatei.LogProduktId:=true;
     i := 1;
-    while (i <= Produkte.Count) and (PerformExitWindows < txrReboot) and
-      not PerformExitProgram do
+    while (i <= Produkte.Count) do
     begin
       Produkt := Produkte.Strings[i - 1];
       scriptMode := tsmLogin;
