@@ -342,7 +342,7 @@
         <ComponentName Value="DialogServicePassword"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="13"/>
+        <EditorIndex Value="14"/>
         <TopLine Value="45"/>
         <CursorPos X="38" Y="65"/>
         <UsageCount Value="200"/>
@@ -389,7 +389,7 @@
         <ComponentName Value="CentralForm"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="6"/>
+        <EditorIndex Value="7"/>
         <TopLine Value="841"/>
         <CursorPos X="39" Y="860"/>
         <UsageCount Value="200"/>
@@ -460,9 +460,8 @@
       </Unit27>
       <Unit28>
         <Filename Value="changelog.txt"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="1"/>
-        <CursorPos X="38" Y="15"/>
+        <CursorPos X="47" Y="13"/>
         <UsageCount Value="100"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="None"/>
@@ -541,7 +540,7 @@
       </Unit37>
       <Unit38>
         <Filename Value="osfunclin.pas"/>
-        <EditorIndex Value="10"/>
+        <EditorIndex Value="11"/>
         <TopLine Value="203"/>
         <CursorPos X="10" Y="228"/>
         <UsageCount Value="204"/>
@@ -567,7 +566,7 @@
       <Unit41>
         <Filename Value="osfunc.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="8"/>
+        <EditorIndex Value="9"/>
         <TopLine Value="8726"/>
         <CursorPos X="32" Y="8736"/>
         <ExtraEditorCount Value="2"/>
@@ -588,7 +587,7 @@
       <Unit42>
         <Filename Value="osfuncwin2.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="2"/>
+        <EditorIndex Value="3"/>
         <TopLine Value="18"/>
         <CursorPos X="30" Y="26"/>
         <UsageCount Value="209"/>
@@ -605,15 +604,15 @@
       <Unit44>
         <Filename Value="osparser.pas"/>
         <IsPartOfProject Value="True"/>
-        <IsVisibleTab Value="True"/>
-        <WindowIndex Value="1"/>
-        <TopLine Value="7727"/>
-        <CursorPos X="48" Y="7727"/>
+        <EditorIndex Value="2"/>
+        <TopLine Value="19557"/>
+        <CursorPos X="31" Y="19592"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
-          <EditorIndex Value="-1"/>
-          <TopLine Value="218"/>
-          <CursorPos X="22" Y="232"/>
+          <IsVisibleTab Value="True"/>
+          <WindowIndex Value="1"/>
+          <TopLine Value="2994"/>
+          <CursorPos X="29" Y="2998"/>
         </ExtraEditor1>
         <UsageCount Value="209"/>
         <Loaded Value="True"/>
@@ -661,7 +660,7 @@
       <Unit51>
         <Filename Value="osconf.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="11"/>
+        <EditorIndex Value="12"/>
         <TopLine Value="73"/>
         <CursorPos X="23" Y="86"/>
         <UsageCount Value="205"/>
@@ -678,9 +677,9 @@
       <Unit53>
         <Filename Value="osmain.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="7"/>
-        <TopLine Value="1848"/>
-        <CursorPos Y="1867"/>
+        <EditorIndex Value="8"/>
+        <TopLine Value="1524"/>
+        <CursorPos X="7" Y="1539"/>
         <UsageCount Value="204"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
@@ -768,7 +767,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="106"/>
+        <UsageCount Value="110"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit65>
       <Unit66>
@@ -778,16 +777,16 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="102"/>
+        <UsageCount Value="106"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit66>
       <Unit67>
         <Filename Value="..\common\osencoding.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="3"/>
+        <EditorIndex Value="4"/>
         <TopLine Value="8"/>
         <CursorPos X="14" Y="16"/>
-        <UsageCount Value="102"/>
+        <UsageCount Value="106"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit67>
@@ -798,7 +797,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="102"/>
+        <UsageCount Value="106"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit68>
       <Unit69>
@@ -808,26 +807,27 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="102"/>
+        <UsageCount Value="106"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit69>
       <Unit70>
         <Filename Value="..\common\oslog.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="12"/>
+        <EditorIndex Value="13"/>
         <TopLine Value="1347"/>
         <CursorPos X="9" Y="241"/>
-        <UsageCount Value="102"/>
+        <UsageCount Value="106"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit70>
       <Unit71>
         <Filename Value="..\common\oswebservice.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="5"/>
-        <TopLine Value="2816"/>
-        <CursorPos X="30" Y="2823"/>
-        <UsageCount Value="102"/>
+        <IsVisibleTab Value="True"/>
+        <EditorIndex Value="6"/>
+        <TopLine Value="4186"/>
+        <CursorPos X="30" Y="4209"/>
+        <UsageCount Value="106"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit71>
@@ -838,7 +838,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="102"/>
+        <UsageCount Value="106"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit72>
       <Unit73>
@@ -848,7 +848,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="102"/>
+        <UsageCount Value="106"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit73>
       <Unit74>
@@ -858,7 +858,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="102"/>
+        <UsageCount Value="106"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit74>
       <Unit75>
@@ -867,16 +867,16 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="430"/>
         <CursorPos Y="472"/>
-        <UsageCount Value="102"/>
+        <UsageCount Value="106"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit75>
       <Unit76>
         <Filename Value="osregistry.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="9"/>
+        <EditorIndex Value="10"/>
         <TopLine Value="96"/>
         <CursorPos X="22" Y="103"/>
-        <UsageCount Value="102"/>
+        <UsageCount Value="106"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit76>
@@ -897,7 +897,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="7"/>
         <CursorPos X="58" Y="42"/>
-        <UsageCount Value="97"/>
+        <UsageCount Value="101"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit78>
       <Unit79>
@@ -907,7 +907,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="49"/>
+        <UsageCount Value="53"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit79>
       <Unit80>
@@ -917,7 +917,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="42"/>
+        <UsageCount Value="46"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit80>
       <Unit81>
@@ -930,130 +930,130 @@
       </Unit81>
       <Unit82>
         <Filename Value="..\external_libraries\indy\Lib\Protocols\IdHTTP.pas"/>
-        <EditorIndex Value="4"/>
+        <EditorIndex Value="5"/>
         <TopLine Value="1796"/>
         <CursorPos X="12" Y="1808"/>
-        <UsageCount Value="16"/>
+        <UsageCount Value="18"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit82>
     </Units>
     <JumpHistory Count="29" HistoryIndex="28">
       <Position1>
-        <Filename Value="osmain.pas"/>
-        <Caret Line="560" Column="43" TopLine="550"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="1943" Column="25" TopLine="1915"/>
       </Position1>
       <Position2>
-        <Filename Value="osmain.pas"/>
-        <Caret Line="1867" TopLine="1848"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="18222" Column="58" TopLine="18194"/>
       </Position2>
       <Position3>
         <Filename Value="osparser.pas"/>
-        <Caret Line="16876" Column="25" TopLine="16876"/>
+        <Caret Line="18333" Column="56" TopLine="18311"/>
       </Position3>
       <Position4>
         <Filename Value="osparser.pas"/>
-        <Caret Line="1969" Column="31" TopLine="1958"/>
+        <Caret Line="18464" Column="56" TopLine="18436"/>
       </Position4>
       <Position5>
         <Filename Value="osparser.pas"/>
-        <Caret Line="17670" Column="24" TopLine="17655"/>
+        <Caret Line="20699" Column="48" TopLine="20698"/>
       </Position5>
       <Position6>
         <Filename Value="osparser.pas"/>
-        <Caret Line="17765" Column="45" TopLine="17745"/>
+        <Caret Line="18359" Column="94" TopLine="18320"/>
       </Position6>
       <Position7>
         <Filename Value="osparser.pas"/>
-        <Caret Line="1943" Column="25" TopLine="1917"/>
+        <Caret Line="17794" Column="68" TopLine="17778"/>
       </Position7>
       <Position8>
         <Filename Value="osparser.pas"/>
-        <Caret Line="417" Column="35" TopLine="402"/>
+        <Caret Line="1902" Column="10" TopLine="1890"/>
       </Position8>
       <Position9>
         <Filename Value="osparser.pas"/>
-        <Caret Line="1943" Column="25" TopLine="1915"/>
+        <Caret Line="17765" Column="23" TopLine="17744"/>
       </Position9>
       <Position10>
         <Filename Value="osparser.pas"/>
-        <Caret Line="18222" Column="58" TopLine="18194"/>
+        <Caret Line="1943" Column="25" TopLine="1926"/>
       </Position10>
       <Position11>
         <Filename Value="osparser.pas"/>
-        <Caret Line="18333" Column="56" TopLine="18311"/>
+        <Caret Line="417" Column="13" TopLine="401"/>
       </Position11>
       <Position12>
         <Filename Value="osparser.pas"/>
-        <Caret Line="18464" Column="56" TopLine="18436"/>
+        <Caret Line="20703" Column="107" TopLine="120"/>
       </Position12>
       <Position13>
         <Filename Value="osparser.pas"/>
-        <Caret Line="20699" Column="48" TopLine="20698"/>
+        <Caret Line="418" Column="104" TopLine="402"/>
       </Position13>
       <Position14>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="18359" Column="94" TopLine="18320"/>
+        <Filename Value="osfunc.pas"/>
+        <Caret Line="1029" TopLine="1010"/>
       </Position14>
       <Position15>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="17794" Column="68" TopLine="17778"/>
+        <Filename Value="osfunc.pas"/>
+        <Caret Line="344" Column="22" TopLine="330"/>
       </Position15>
       <Position16>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="1902" Column="10" TopLine="1890"/>
+        <Filename Value="osfunc.pas"/>
+        <Caret Line="8389" Column="24" TopLine="8377"/>
       </Position16>
       <Position17>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="17765" Column="23" TopLine="17744"/>
+        <Filename Value="osfunc.pas"/>
+        <Caret Line="9028" Column="16" TopLine="9011"/>
       </Position17>
       <Position18>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="1943" Column="25" TopLine="1926"/>
+        <Filename Value="osfunc.pas"/>
+        <Caret Line="8694" Column="10" TopLine="8679"/>
       </Position18>
       <Position19>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="417" Column="13" TopLine="401"/>
+        <Filename Value="osfunc.pas"/>
+        <Caret Line="8579" Column="10" TopLine="8563"/>
       </Position19>
       <Position20>
         <Filename Value="osparser.pas"/>
-        <Caret Line="20703" Column="107" TopLine="120"/>
+        <Caret Line="20714" Column="33" TopLine="20714"/>
       </Position20>
       <Position21>
         <Filename Value="osparser.pas"/>
-        <Caret Line="418" Column="104" TopLine="402"/>
+        <Caret Line="1188" Column="16" TopLine="1170"/>
       </Position21>
       <Position22>
-        <Filename Value="osfunc.pas"/>
-        <Caret Line="1029" TopLine="1010"/>
+        <Filename Value="osmain.pas"/>
+        <Caret Line="1867" TopLine="1848"/>
       </Position22>
       <Position23>
-        <Filename Value="osfunc.pas"/>
-        <Caret Line="344" Column="22" TopLine="330"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="7727" Column="48" TopLine="7727"/>
       </Position23>
       <Position24>
-        <Filename Value="osfunc.pas"/>
-        <Caret Line="8389" Column="24" TopLine="8377"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="19526" Column="40" TopLine="19512"/>
       </Position24>
       <Position25>
-        <Filename Value="osfunc.pas"/>
-        <Caret Line="9028" Column="16" TopLine="9011"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="2998" Column="11" TopLine="2981"/>
       </Position25>
       <Position26>
-        <Filename Value="osfunc.pas"/>
-        <Caret Line="8694" Column="10" TopLine="8679"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="629" Column="6" TopLine="611"/>
       </Position26>
       <Position27>
-        <Filename Value="osfunc.pas"/>
-        <Caret Line="8579" Column="10" TopLine="8563"/>
+        <Filename Value="..\common\oswebservice.pas"/>
+        <Caret Line="2823" Column="30" TopLine="2816"/>
       </Position27>
       <Position28>
         <Filename Value="osparser.pas"/>
-        <Caret Line="20714" Column="33" TopLine="20714"/>
+        <Caret Line="19590" Column="14" TopLine="19558"/>
       </Position28>
       <Position29>
         <Filename Value="osparser.pas"/>
-        <Caret Line="1188" Column="16" TopLine="1170"/>
+        <Caret Line="19604" Column="18" TopLine="19520"/>
       </Position29>
     </JumpHistory>
   </ProjectOptions>
@@ -1120,7 +1120,7 @@
         <WatchScope Value="wpsLocal"/>
         <WatchKind Value="wpkWrite"/>
         <Source Value="osmain.pas"/>
-        <Line Value="1867"/>
+        <Line Value="1866"/>
       </Item2>
     </BreakPoints>
     <Watches Count="5">
