@@ -7,6 +7,11 @@ isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-pac
 opsi-winst/opsi-script (4.12.0.35) stable; urgency=low
 
   * osparser: producestringlist: getsublist: with whitespaces around numbers
+  * osmain: Loginscripts: do not break login script loop on reboots
+  * oswebservice: getMapOfLoginscripts2Run: allscripts=false:
+      we want to run the login script if installed
+      or last successful action was uninstall
+
 
 -- Detlef Oertel <d.oertel@uib.de>  Tue, 15 Jan 2019:15:00:00 +0200
 
